cfgov/unprocessed/apps/tccp/css/main.less
@import (reference) '../../../css/main.less';

.respond-to-min(@bp-sm-min, {
  .o-form_group {
    max-width: unit((380px / @base-font-size-px), em);
  }
});

.m-btn-group {
  .u-btn-helper {
    width: 100%;
    margin-top: unit((15px / @base-font-size-px), em);
    text-align: center;
    a {
      border-bottom-width: 1px;
    }
    .respond-to-min(@bp-sm-min, {
      display: inline-block;
      width: auto;
      margin-top: 0;
      margin-left: unit((6px / @btn-font-size), em);
    });
  }
}

// Some cards list a lot of available locations and disrupt the table layout.
// Cap the width of the availability cell on non-mobile screens to prevent this.
@media only screen and (min-width: @bp-sm-min) {
  td[data-label='Availability'] {
    max-width: unit((350px / @base-font-size-px), em);
  }
  td[data-label='Purchase APR'] {
    min-width: unit((215px / @base-font-size-px), em);
    .cf-icon-svg:first-of-type {
      margin-left: 0;
    }
  }
}

// Overrides to the make the directory table pattern sticky
// https://cfpb.github.io/design-system/components/tables#responsive-stacked-table-with-header-directory-table
@media only screen and (max-width: @bp-xs-max) {
  .o-table__entry-header-on-small {
    border-top: 0;

    & > tbody td:first-child {
      position: sticky;
      margin-top: -1px;
      margin-bottom: 0;
      top: 0;
      border-top: 1px solid @table-border;
    }

    & > tbody > tr {
      margin-bottom: 0;
    }

    td:last-child {
      margin-bottom: 0;
      padding-bottom: unit((30px / @base-font-size-px), em);
    }
  }
}

.o-table__stack-on-small-hybrid {
  // We don't want responsive table styles applied to the `print` media type
  // so we're not using .respond-to-max(@bp-xs-max ) here.
  @media only screen and (max-width: @bp-xs-max) {
    --columns: 0;

    display: grid;
    grid-template-columns: repeat(var(--columns), auto);

    tr,
    th,
    td {
      padding: unit((10px / @base-font-size-px), rem);
      width: auto;
    }

    thead,
    tbody,
    tr {
      display: contents;
    }

    th {
      display: none;
      &[data-column] {
        display: block;
        margin-bottom: unit((8px / @base-font-size-px), rem);
        border-bottom: 1px solid @table-border;
      }
    }

    td:last-child {
      &:not([data-column]) {
        border-bottom: 1px solid @table-border;
        margin-bottom: unit((10px / @base-font-size-px), rem);
        padding-bottom: unit((20px / @base-font-size-px), rem);
      }
    }

    td[data-label] {
      &::before {
        .heading-5();
        display: block;
        margin-top: 0;
        margin-bottom: unit((5px / @base-font-size-px), rem);
        content: attr(data-label);
        line-height: 1.83333333;
      }
      &:not([data-column]) {
        grid-column: 1 / span var(--columns);
      }
      &[data-column]::before {
        display: none;
      }
    }
  }

  @media only screen and (min-width: @bp-sm-min) {
    // Override .o-table_cell__right-align on non-mobile devices
    th,
    td {
      text-align: left;
    }
  }
}

.a-card-institution-name {
  .heading-5( @text-shadow: @gray );
  color: @gray;
  margin-bottom: 0;
}

.a-card-purchase-apr-rating {
  // Put the APR ratings on their own line on non-mobile devices
  @media only screen and (min-width: @bp-sm-min) {
    display: block;
  }

  .cf-icon-svg:first-of-type {
    margin-left: unit((4px / @base-font-size-px), em);
  }

  .cf-icon-svg:last-of-type {
    margin-right: unit((2px / @base-font-size-px), em);
  }

  &__less .cf-icon-svg {
    color: @green;
  }

  &__average .cf-icon-svg {
    color: @gold;
  }

  &__more .cf-icon-svg {
    color: @red;
  }
}

.m-list__card-details {
  dt {
    margin-top: 15px;
  }
  dt:last-of-type {
    margin-bottom: 0.5em;
  }
  dt,
  dd {
    display: block;
  }
  dd {
    margin-left: 0;
  }
  dd + dd {
    margin-top: 15px;
  }
  dd::after {
    content: none;
  }
  dd .o-table {
    margin-top: 10px;
  }
}

